# Garuda_AI

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PKGBUILD  QUICKSTART.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude/: settings.json
config/: config.toml.example
src/: __init__.py  __main__.py  agent.py  airllm_backend.py  cli.py  hardware.py  models.py  ollama_manager.py
src/static/: index.html  manifest.json  script.js  style.css  sw-register.js  sw.js
src/tools/: __init__.py  filesystem.py  rag_tool.py  shell.py  system_control.py
systemd/: garudaai-ollama.service  garudaai.service
tests/: __init__.py  test_agent.py  test_filesystem.py  test_hardware.py  test_models.py  test_ollama_manager.py  test_shell.py
