[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garudaai"
version = "0.1.0"
description = "A self-hosted, hardware-aware, phone-controlled local AI agent platform"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "GarudaAI Contributors", email = "dev@garudaai.local" }
]
keywords = ["ai", "ollama", "agent", "local", "pwa", "garuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.9.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "click>=8.1.7",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "cryptography>=42.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
airllm = [
    "airllm>=2.11.0",
    "bitsandbytes>=0.43.0",
]
rag = [
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
]
voice = [
    "faster-whisper>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/SanyamWadhwa07/Garuda_AI"
Repository = "https://github.com/SanyamWadhwa07/Garuda_AI.git"
Issues = "https://github.com/SanyamWadhwa07/Garuda_AI/issues"

[project.scripts]
garudaai = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.tools"]
package-data = { src = ["static/**/*", "static/*.js", "static/*.css", "static/*.html", "static/*.json"] }

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long
    "B008",  # function calls in defaults
]
